--- a/app/src/main/res/layout/activity_sign_up_individual.xml
+++ b/app/src/main/res/layout/activity_sign_up_individual.xml
@@ -36,7 +36,7 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/firstname"
+                    android:id="@+id/full_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="15dp"
