--- a/app/src/main/res/layout/activity_sign_up_individual.xml
+++ b/app/src/main/res/layout/activity_sign_up_individual.xml
@@ -40,10 +40,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawablePadding="15dp"
-                    android:hint="FirstName"
+                    android:hint="Full Name"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
-
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,11 +51,10 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/lastname"
+                    android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
-
                     android:layout_height="wrap_content"
-                    android:hint="LastName"
+                    android:hint="PhoneNumber"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -91,22 +89,6 @@
                     android:inputType="textPassword"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:textColorHint="@color/colorAccent"
-                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/phonenumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="PhoneNumber"
-                    android:singleLine="true" />
-            </android.support.design.widget.TextInputLayout>
-
             <Button
                 android:id="@+id/sign_up_button"
                 style="?android:textAppearanceSmall"
