--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="timestamp">#a0a3a7</color>
     <color name="ButtonTextColor">#504549</color>
 
+    <color name="black">#000000</color>
 
 
 </resources>
