--- a/app/src/main/res/layout/activity_individua_generalinfo.xml
+++ b/app/src/main/res/layout/activity_individua_generalinfo.xml
@@ -85,12 +85,13 @@
             android:layout_marginBottom="15dp">
 
             <RadioButton
-                android:id="@+id/radioButton1"
+                android:id="@+id/male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Male"
                 />
             <RadioButton
+                android:id="@+id/female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/radioGroup1"
