--- a/app/src/main/res/layout/activity_individual_careerinfo.xml
+++ b/app/src/main/res/layout/activity_individual_careerinfo.xml
@@ -35,23 +35,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="Telling us your current educational level will help us to customize your experince"
+                android:text="Telling us your current educational level will help us to customize your experience"
                 android:textColor="@color/colorPrimary"
                 android:textSize="12dp" />
 
             <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-                android:id="@+id/Levelofqualification"
+                android:id="@+id/qualification_level"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:hint="  Level of qualification"
+                android:hint="Level of qualification"
                 android:textColorHint="#05ab9a"
                 app:met_floatingLabel="normal" />
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutSchool_Name"
+                android:id="@+id/layout_school_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -69,7 +69,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutSchool_type_Name"
+                android:id="@+id/layoutSchool_type_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
@@ -77,17 +77,16 @@
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
-                <EditText
-                    android:id="@+id/School_type_Name"
+                <AutoCompleteTextView
+                    android:id="@+id/school_type_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="School Type"
-
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/Layoutuniversity_Name"
+                android:id="@+id/layout_university_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -95,19 +94,16 @@
                 android:layout_marginRight="10dp"
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
-
-                <EditText
-                    android:id="@+id/university_Name"
+                <AutoCompleteTextView
+                    android:id="@+id/university_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="university/Institution Name "
-
+                    android:hint="University/Institution Name "
                     android:singleLine="true" />
-
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutCollegeName"
+                android:id="@+id/layout_college_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -115,19 +111,18 @@
                 android:layout_marginRight="10dp"
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
-
-                <EditText
-                    android:id="@+id/CollegeName"
+                <AutoCompleteTextView
+                    android:id="@+id/college_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="College/type"
+                    android:hint="College "
 
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutSpecialization_name"
+                android:id="@+id/layoutSpecialization_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -136,8 +131,8 @@
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
-                <EditText
-                    android:id="@+id/Specialization_name"
+                <AutoCompleteTextView
+                    android:id="@+id/specialization_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Specialization"
@@ -147,7 +142,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/Layoutgrade_name"
+                android:id="@+id/layoutGrade_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -156,7 +151,7 @@
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/grade_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -167,7 +162,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutFieldDiploma"
+                android:id="@+id/layoutField_diploma"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -177,7 +172,7 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <EditText
-                    android:id="@+id/FieldDiploma"
+                    android:id="@+id/field_diploma"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Field of diploma "
@@ -187,7 +182,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutFieldMasters"
+                android:id="@+id/layoutField_masters"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -198,7 +193,7 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <EditText
-                    android:id="@+id/FieldMasters"
+                    android:id="@+id/field_masters"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Field of Masters  "
@@ -208,7 +203,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutFieldDoctorate"
+                android:id="@+id/layoutField_doctorate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -218,7 +213,7 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <EditText
-                    android:id="@+id/FieldDoctorate"
+                    android:id="@+id/field_doctorate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Field of Doctorate   "
@@ -228,14 +223,14 @@
 
 
             <LinearLayout
-                android:id="@+id/Layout_Year"
+                android:id="@+id/layout_year"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/Layoutstart_Year"
+                    android:id="@+id/layoutStart_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -245,7 +240,7 @@
                     app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                     <EditText
-                        android:id="@+id/start_Year"
+                        android:id="@+id/start_year"
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:hint="Start Year"
@@ -254,7 +249,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/Layoutend_Year"
+                    android:id="@+id/layoutEnd_year"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -264,18 +259,15 @@
                     app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                     <EditText
-                        android:id="@+id/end_Year"
+                        android:id="@+id/end_year"
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:hint="End Year"
-
                         android:singleLine="true" />
                 </android.support.design.widget.TextInputLayout>
-
             </LinearLayout>
-
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutInterests"
+                android:id="@+id/layout_interests"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -285,7 +277,7 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <MultiAutoCompleteTextView
-                    android:id="@+id/Interests"
+                    android:id="@+id/interests"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Interests" />
@@ -293,7 +285,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutSkills_Talents"
+                android:id="@+id/LayoutSkills_talents"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -303,7 +295,7 @@
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                 <MultiAutoCompleteTextView
-                    android:id="@+id/Skills_Talents"
+                    android:id="@+id/skills_talents"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Skills/Talents" />
@@ -312,7 +304,7 @@
 
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/Layoutexperience"
+                android:id="@+id/Layout_experience"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -340,17 +332,16 @@
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
-                <EditText
-                    android:id="@+id/Company_name"
+                <AutoCompleteTextView
+                    android:id="@+id/company_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Company Name"
-
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutJob_Title"
+                android:id="@+id/layoutJob_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -359,17 +350,16 @@
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
-                <EditText
-                    android:id="@+id/Job_Title"
+                <AutoCompleteTextView
+                    android:id="@+id/job_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Position/Job Title"
-
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/LayoutDepartment"
+                android:id="@+id/layout_department"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -378,8 +368,8 @@
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
-                <EditText
-                    android:id="@+id/Department"
+                <AutoCompleteTextView
+                    android:id="@+id/department"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Department"
@@ -388,7 +378,7 @@
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:id="@+id/individualNext1"
+                android:id="@+id/individual_next1"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -401,8 +391,6 @@
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 />
-
-
         </LinearLayout>
     </ScrollView>
 
