--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -21,36 +23,37 @@
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Career Track"
-                android:textSize="30dp"
                 android:padding="50dp"
-                android:textStyle="bold"
+                android:text="Career Track"
                 android:textColor="@color/colorPrimary"
-                />
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_centerInParent="true"
-                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
-                android:textColorHint="@color/colorAccent"
                 android:layout_height="wrap_content"
-                app:errorEnabled="true">
+                android:layout_centerInParent="true"
+                android:textColorHint="@color/colorAccent"
+                app:errorEnabled="true"
+                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
+
                 <android.support.design.widget.TextInputEditText
-                    android:singleLine="true"
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Email"/>
+                    android:hint="Email"
+                    android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/textinputlayoutPassword"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                 android:textColorHint="@color/colorAccent"
-                app:passwordToggleEnabled="true"
-                android:layout_height="wrap_content">
+                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
+                app:passwordToggleEnabled="true">
+
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
@@ -68,16 +71,15 @@
 
                 <android.support.v7.widget.AppCompatTextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Forget your"/>
+                    android:layout_height="wrap_content" />
                 <Button
                     android:id="@+id/btn_reset_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
-                    android:text="password?"
-                    android:textColor="@color/ButtonTextColor"
-                    />
+                    android:text="Forgot your password?"
+                    android:textAllCaps="false"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
             <!-- Login Button -->
@@ -86,10 +88,10 @@
                 android:id="@+id/btn_login"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Sign in"
                 android:background="@color/colorPrimary"
+                android:text="Log In"
+                android:textAllCaps="false"
                 android:textColor="@android:color/white" />
-
 
 
             <!-- Link to Login Screen -->
@@ -97,9 +99,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="50dp"
+                android:orientation="horizontal"
 
 
                 >
@@ -108,32 +110,33 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
-                    android:text="Don\'t have an account yet? " />
+                    android:text="New here? Create an account  " />
 
                 <Button
                     android:id="@+id/btn_signup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
+                    android:gravity="start"
                     android:text="@string/btn_signUp"
+                    android:textAlignment="textStart"
                     android:textAllCaps="false"
                     android:textColor="@color/ButtonTextColor"
                     android:textSize="15dp"
-                    android:textAlignment="textStart"
-                    tools:ignore="SpUsage"
-                    android:gravity="start" />
+                    tools:ignore="SpUsage" />
 
             </LinearLayout>
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center|bottom"
                 android:visibility="gone"
-                android:layout_centerHorizontal="true"
+                tools:ignore="MissingConstraints"
                 tools:layout_editor_absoluteX="142dp"
-                tools:layout_editor_absoluteY="162dp"
-                tools:ignore="MissingConstraints"/>
+                tools:layout_editor_absoluteY="162dp" />
 
         </LinearLayout>
 
