--- a/app/src/main/res/layout/activity_verify_email.xml
+++ b/app/src/main/res/layout/activity_verify_email.xml
@@ -5,8 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".signup.VerifyEmail">
-
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -18,7 +16,6 @@
             android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/activity_horizontal_margin">
-
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -26,7 +23,6 @@
                 android:layout_marginTop="50dp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="20sp"/>
-
             <android.support.v7.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -35,7 +31,6 @@
                 android:layout_gravity="left"
                 android:textColor="@color/colorPrimary"
                 android:text="Check your Email Account."/>
-
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_centerInParent="true"
@@ -43,18 +38,15 @@
                 android:textColorHint="@color/colorAccent"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/emailverify"
+                    android:id="@+id/email_verify"
                     android:layout_marginTop="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:accessibilityHeading="true"
                     android:hint="Email"/>
             </android.support.design.widget.TextInputLayout>
-
-
-
             <Button
-                android:id="@+id/Done_EmailisVerified_button"
+                android:id="@+id/email_verified_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -80,19 +72,17 @@
                 android:textStyle="bold"
                 android:textAllCaps="false"
                 />
-
             <Button
                 android:id="@+id/Skip_Email_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:text="Skip"
-                android:layout_marginTop="40dp"
+
+                android:layout_marginTop="5dp"
                 android:textColor="@color/colorPrimary"
                 android:textSize="15dp"
                 android:gravity="center" />
-
-
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
