--- a/app/src/main/res/layout/tracks_fragment.xml
+++ b/app/src/main/res/layout/tracks_fragment.xml
@@ -34,11 +34,14 @@
                     android:layout_height="match_parent"
                     android:background="@color/feed_bg"
                     android:orientation="vertical">
+
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/recycler_view_tracks_screen"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        />
+                        android:layout_height="wrap_content" />
+
+
+
 
                 </LinearLayout>
 
