--- a/app/src/main/res/layout/activity_track_profile.xml
+++ b/app/src/main/res/layout/activity_track_profile.xml
@@ -110,9 +110,9 @@
         </LinearLayout>
     </ScrollView>
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="&#xA;                    android:layout_width=&quot;wrap_content&quot;" />
+    <!--<TextView-->
+        <!--android:id="@+id/textView2"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="&#xA;                    android:layout_width=&quot;wrap_content&quot;" />-->
 </FrameLayout>
