--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/L1"
     tools:context=".screens.notification.NotificationActivity">
 
     <include
@@ -44,10 +45,9 @@
                     android:orientation="vertical">
 
                     <android.support.v7.widget.RecyclerView
-                        android:id="@+id/recycler_view_notification_screen"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        />
+                        android:id="@+id/requestList"/>
 
                     <TextView
                         android:id="@+id/txt_push_message"
