--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +10,13 @@
     app:cardUseCompatPadding="true"
     card_view:cardBackgroundColor="#E5EEF1">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -24,7 +33,7 @@
             android:orientation="horizontal">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profilePic"
+                android:id="@+id/profile_pic_show"
                 android:layout_width="@dimen/feed_item_profile_pic"
                 android:layout_height="@dimen/feed_item_profile_pic"
                 android:src="@drawable/profile_person"
@@ -38,15 +47,15 @@
                 android:paddingLeft="@dimen/feed_item_profile_info_padd">
 
                 <TextView
-                    android:id="@+id/Profile_name"
+                    android:id="@+id/Profile_name_show"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="Ebrahim Khaled "
+                    android:text="xy"
                     android:textSize="@dimen/feed_item_profile_name"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/timestamp"
+                    android:id="@+id/timestamp_show"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="12:20 AM"
@@ -56,7 +65,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/txtStatusMsgPost"
+            android:id="@+id/txtStatusMsgPost_show"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/feed_item_status_pad_left_right"
@@ -65,19 +74,8 @@
             android:paddingBottom="5dp"
             android:text="@string/bio_profile2" />
 
-        <!--<TextView-->
-        <!--android:id="@+id/name_image"-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:linksClickable="true"-->
-        <!--android:paddingLeft="@dimen/feed_item_status_pad_left_right"-->
-        <!--android:paddingRight="@dimen/feed_item_status_pad_left_right"-->
-        <!--android:paddingBottom="10dp"-->
-        <!--android:text="www.google.com"-->
-        <!--android:textColorLink="@color/link" />-->
-
         <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/post_image"
+            android:id="@+id/post_image_show"
             android:layout_width="wrap_content"
             android:layout_height="127dp"
             android:scaleType="centerCrop"
@@ -94,24 +92,19 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/Number_Of_Likes"
+                    android:id="@+id/Number_Of_Likes_show"
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:text="00"/>
                 <ImageButton
-                    android:id="@+id/thumbs_up"
+                    android:id="@+id/thumbs_up_show"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:background="@drawable/ic_thumb_up_black" />
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:text="Likes" />-->
             </LinearLayout>
 
             <LinearLayout
@@ -126,7 +119,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
                 <Button
-                    android:id="@+id/post_comment"
+                    android:id="@+id/post_comment_show"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -137,11 +130,84 @@
 
 
             <Button
+                android:id="@+id/share_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:textStyle="bold"
                 android:text="Share"/>
         </LinearLayout>
+
+
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/headerLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="?attr/actionBarSize"
+                android:orientation="horizontal"
+                android:layout_alignParentTop="true"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/number_show"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Some One and 20 Others Like this"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:layout_margin="5dp"/>
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/commentsListView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/headerLayout"
+                android:layout_above="@+id/comment_section"
+                android:layout_marginBottom="0dp"/>
+
+            <FrameLayout
+                android:id="@+id/comment_section"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                >
+
+                <ImageView
+                    android:id="@+id/add_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxHeight="30dp"
+                    android:minHeight="20dp"
+                    android:layout_gravity="end"
+                    android:src="@drawable/ic_add_comment"
+                    />
+                <EditText
+                    android:id="@+id/write_comment"
+                    android:hint="Write a Comment"
+                    android:layout_marginRight="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:maxLines="2"
+                    android:focusable="true"
+                    android:layout_marginLeft="2dp"
+                    android:textSize="12sp"
+                    android:textColor="@color/black"
+                    android:background="#00000000"/>
+
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
+</LinearLayout>
+    </ScrollView>
 </android.support.v7.widget.CardView>
