--- a/app/src/main/res/layout/activity_academy_profile.xml
+++ b/app/src/main/res/layout/activity_academy_profile.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/feed_bg"
     android:orientation="vertical"
-    tools:context=".OtherProfile.AcademyProfileActivity">
+    tools:context=".AcademyProfile.AcademyProfileActivity">
 
 
     <android.support.v7.widget.Toolbar
@@ -368,136 +368,10 @@
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
 
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="3dp"
-                        card_view:cardBackgroundColor="@color/track_color"
-                        card_view:cardCornerRadius="4dp"
-                        card_view:cardElevation="4dp"
-                        card_view:cardMaxElevation="6dp"
-                        card_view:contentPadding="2dp">
 
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <FrameLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_below="@+id/nameFramelayout"
-                                        android:layout_gravity="start"
-                                        android:layout_margin="5dp"
-                                        android:text=" Academy Fields: "
-                                        android:textColor="@color/colorAccent"
-                                        android:textSize="15dp" />
-
-
-                                </FrameLayout>
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:gravity="center"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:id="@+id/uni_profile_college"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="5dp"
-                                        android:gravity="center_vertical"
-                                        android:text=""
-                                        android:textColor="@color/colorAccent"
-                                        android:textSize="15dp" />
-                                </LinearLayout>
-                            </LinearLayout>
-                        </LinearLayout>
-
-
-                    </android.support.v7.widget.CardView>
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="3dp"
-                        card_view:cardBackgroundColor="@color/track_color"
-                        card_view:cardCornerRadius="4dp"
-                        card_view:cardElevation="4dp"
-                        card_view:cardMaxElevation="6dp"
-                        card_view:contentPadding="2dp">
-
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                                <FrameLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_below="@+id/nameFramelayout"
-                                        android:layout_gravity="start"
-                                        android:layout_margin="5dp"
-                                        android:text=" Courses: "
-                                        android:textColor="@color/colorAccent"
-                                        android:textSize="15dp" />
-
-                                </FrameLayout>
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:gravity="center"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:id="@+id/uni_profile_spec"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:layout_gravity="center"
-                                        android:layout_marginLeft="5dp"
-                                        android:gravity="center_vertical"
-                                        android:text="  "
-                                        android:textColor="@color/colorAccent"
-                                        android:textSize="15dp" />
-                                </LinearLayout>
-                            </LinearLayout>
-                        </LinearLayout>
-
-
-                    </android.support.v7.widget.CardView>
 
 
                     <android.support.v7.widget.CardView
-                        android:layout_marginBottom="125dp"
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -636,6 +510,127 @@
                             </LinearLayout>
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="3dp"
+                        card_view:cardBackgroundColor="@color/track_color"
+                        card_view:cardCornerRadius="4dp"
+                        card_view:cardElevation="4dp"
+                        card_view:cardMaxElevation="6dp"
+                        card_view:contentPadding="2dp">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <FrameLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_below="@+id/nameFramelayout"
+                                        android:layout_gravity="start"
+                                        android:layout_margin="5dp"
+                                        android:text=" Academy Fields: "
+                                        android:textColor="@color/colorAccent"
+                                        android:textSize="15dp" />
+
+
+                                </FrameLayout>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:gravity="center"
+                                    android:orientation="horizontal">
+
+                                    <TextView
+                                        android:id="@+id/uni_profile_college"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        android:layout_gravity="center"
+                                        android:layout_marginLeft="5dp"
+                                        android:gravity="center_vertical"
+                                        android:text=""
+                                        android:textColor="@color/colorAccent"
+                                        android:textSize="15dp" />
+                                </LinearLayout>
+                            </LinearLayout>
+                        </LinearLayout>
+
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_marginBottom="125dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="3dp"
+                        card_view:cardBackgroundColor="@color/track_color"
+                        card_view:cardCornerRadius="4dp"
+                        card_view:cardElevation="4dp"
+                        card_view:cardMaxElevation="6dp"
+                        card_view:contentPadding="2dp">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <FrameLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    >
+                                    <ImageView
+                                        android:id="@+id/add_comment"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="20dp"
+                                        android:maxHeight="50dp"
+                                        android:minHeight="50dp"
+                                        android:minWidth="90dp"
+                                        android:layout_gravity="end"
+                                        android:src="@drawable/ic_arrow_right_black_"
+                                        />
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_below="@+id/nameFramelayout"
+                                        android:layout_gravity="start"
+                                        android:layout_margin="5dp"
+                                        android:text=" Courses "
+                                        android:textColor="@color/colorAccent"
+                                        android:textSize="50dp"
+                                        android:fontFamily="sans-serif"/>
+
+                                </FrameLayout>
+                            </LinearLayout>
+                        </LinearLayout>
+
+
+                    </android.support.v7.widget.CardView>
+
                 </LinearLayout>
             </LinearLayout>
 
