--- a/app/src/main/res/layout/activity_university_profile.xml
+++ b/app/src/main/res/layout/activity_university_profile.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     android:background="@color/feed_bg"
     android:orientation="vertical"
-    tools:context=".OtherProfile.UniversityProfileActivity">
+    tools:context=".UniversityProfile.UniversityProfileActivity">
 
 
         <android.support.v7.widget.Toolbar
