--- a/app/src/main/res/layout/activity_choose_path.xml
+++ b/app/src/main/res/layout/activity_choose_path.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
     tools:context=".tracks.ChoosePathActivity">
 
     <include
-        android:id="@+id/track_profile_Screen1"
+        android:id="@+id/choose_path_tool_bar"
         layout="@layout/tool_bar_in_screen" />
 
 
