--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,129 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     android:orientation="vertical"
     tools:context=".newsfeed.post.AddNewPostActivity">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+
+    <include
+        android:id="@+id/add_new_Post_top_bar"
+        layout="@layout/tool_bar_in_screen" />
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/esc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
-                android:gravity="start">
-
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/ic_close"
-                    android:gravity="center" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:paddingRight="30dp"
-                    android:text="New Post"
-                    android:textSize="30dp" />
-
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-
-        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
-            android:id="@+id/share_For_List"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
-            android:hint="Share Post For"
-            android:textColorHint="@color/colorAccent"
-            app:met_floatingLabel="normal" />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-            <EditText
-                android:id="@+id/write_new_post"
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:gravity="top|left"
-                android:hint="Write New Post"
-                android:inputType="textMultiLine"
-                android:maxLength="140"
-                 />
-            <EditText
-                android:id="@+id/Hashtags_Post"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top|left"
-                android:hint="Write New Post"
-                android:inputType="textMultiLine"
-                android:maxLength="140"
-                />
-
-            <ImageView
-                android:id="@+id/new_post_image"
+            <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="10dp" />
+                android:layout_gravity="center_horizontal"
+                card_view:cardBackgroundColor="@color/track_color"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="4dp"
+                card_view:cardUseCompatPadding="true"
+                card_view:contentPadding="5dp">
+
+                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                    android:id="@+id/share_For_List"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:hint="Share Post For"
+                    android:textColorHint="@color/colorAccent"
+                    app:met_floatingLabel="normal" />
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:cardBackgroundColor="@color/track_color"
+                card_view:cardCornerRadius="4dp"
+                card_view:cardElevation="4dp"
+                card_view:cardUseCompatPadding="true"
+                card_view:contentPadding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@color/track_color"
+                        android:orientation="vertical">
+
+
+                        <EditText
+                            android:id="@+id/write_new_post"
+                            android:layout_width="match_parent"
+                            android:layout_height="250dp"
+                            android:gravity="center_horizontal"
+                            android:hint="Write New Post"
+                            android:inputType="textMultiLine"
+                            android:maxLength="500"
+                            android:maxLines="10"
+                            android:scrollbars="vertical" />
+
+
+                        <Button
+                            android:id="@+id/new_post_image_add"
+                            style="?android:textAppearanceSmall"
+                            android:layout_width="53dp"
+                            android:layout_height="wrap_content"
+                            android:layout_alignEnd="@+id/write_new_post"
+                            android:layout_alignBottom="@+id/write_new_post"
+                            android:layout_margin="20dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/ic_add_a_photo_black_24dp" />
+
+
+                    </RelativeLayout>
+
+                    <ImageView
+                        android:id="@+id/new_post_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scaleType="centerCrop"
+                        android:layout_gravity="bottom"
+                        android:layout_marginEnd="10dp" />
+
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_gravity="bottom|center_horizontal"
+                android:gravity="end"
                 android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/new_post_image_add"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="53dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/ic_add_a_photo_black_24dp" />
 
                 <Button
                     android:id="@+id/write_new_post_Button_add"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_margin="20dp"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
+                    android:layout_margin="15dp"
                     android:background="@color/colorAccent"
                     android:text="Post"
                     android:textColor="@color/white" />
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+    </ScrollView>
 </LinearLayout>
