--- a/app/src/main/res/layout/track_recommendation_item.xml
+++ b/app/src/main/res/layout/track_recommendation_item.xml
@@ -37,7 +37,8 @@
             android:layout_height="100dp"
             android:background="@drawable/cover2" />
 
-        <TextView
+
+        <com.borjabravo.readmoretextview.ReadMoreTextView
             android:id="@+id/track_bio_new"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -45,10 +46,16 @@
             android:paddingTop="@dimen/feed_item_status_pad_top"
             android:paddingRight="@dimen/feed_item_status_pad_left_right"
             android:paddingBottom="5dp"
-            android:text="@string/bio_profile3" />
+            android:text="@string/bio_profile3"
+            app:trimCollapsedText="Show less"
+            app:trimExpandedText="Show more"
+            app:trimLength="105"
+            app:trimMode="trimModeLength" />
+
+
 
         <TextView
-            android:id="@+id/profile_name"
+            android:id="@+id/track_Rate_screen"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/feed_item_status_pad_left_right"
