--- a/app/src/main/res/layout/activity_individual_careerinfo.xml
+++ b/app/src/main/res/layout/activity_individual_careerinfo.xml
@@ -94,6 +94,7 @@
                 android:layout_marginRight="10dp"
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
+
                 <AutoCompleteTextView
                     android:id="@+id/university_name"
                     android:layout_width="match_parent"
@@ -111,13 +112,14 @@
                 android:layout_marginRight="10dp"
                 android:textColorHint="@color/colorAccent"
                 app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
+
                 <AutoCompleteTextView
                     android:id="@+id/college_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="College "
 
-                    android:singleLine="true" />
+                    />
             </android.support.design.widget.TextInputLayout>
 
 
@@ -266,6 +268,7 @@
                         android:singleLine="true" />
                 </android.support.design.widget.TextInputLayout>
             </LinearLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_interests"
                 android:layout_width="match_parent"
@@ -382,15 +385,14 @@
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:background="@color/colorPrimary"
                 android:text="Continue"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="center"
-                android:textSize="20dp"
-                android:textStyle="bold"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                />
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
 
