--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -14,13 +14,13 @@
         android:id="@+id/message_top_bar"
         layout="@layout/tool_bar_in_screen" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <SearchView
+        android:id="@+id/simpleSearchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:text="SearchBar" />
+        tools:ignore="MissingConstraints"
+        android:queryHint="Search Here"/>
+
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
