--- a/app/src/main/res/layout/activity_signup_as.xml
+++ b/app/src/main/res/layout/activity_signup_as.xml
@@ -7,66 +7,52 @@
     android:layout_height="match_parent"
     tools:context=".signup.SignupAsActivity">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose a Category"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:textAlignment="center"/>
+        <Button
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:orientation="vertical">
+            android:id="@+id/individual"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:background="@mipmap/individual22"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary" />
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Individual"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginBottom="25dp"
+            android:textAlignment="center"/>
+        <Button
+            android:id="@+id/organization"
+            android:layout_marginTop="-20dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:background="@mipmap/organization"
+            android:textColor="@color/colorPrimary" />
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Organization"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
+            android:layout_marginBottom="25dp"
+            android:textAlignment="center"/>
 
-            <android.support.v7.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Choose a Category"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
-                android:layout_marginBottom="25dp"
-                android:textAlignment="center"/>
-
-            <LinearLayout
-                android:layout_width="250dp"
-                android:layout_height="180dp"
-                android:background="@drawable/my_button_border">
-
-                <Button
-                    android:id="@+id/individual"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:layout_marginTop="10dp"
-                    android:textStyle="bold"
-                    android:background="@null"
-                    android:drawableTop="@drawable/employee"
-                    android:text="Individual"
-                    android:textAllCaps="false"
-
-                    android:textColor="@color/colorPrimary" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="250dp"
-                android:layout_height="180dp"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/my_button_border">
-
-                <Button
-                    android:id="@+id/organization"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:textStyle="bold"
-                    android:layout_height="180dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@null"
-                    android:drawableTop="@drawable/officeblock"
-                    android:text="Organization"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorPrimary" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
