--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +15,6 @@
         card_view:cardElevation="4dp"
         card_view:cardMaxElevation="6dp"
         card_view:contentPadding="2dp"
-        card_view:ignore="MissingConstraints"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
@@ -213,4 +212,4 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
