--- a/app/src/main/res/layout/messege_item.xml
+++ b/app/src/main/res/layout/messege_item.xml
@@ -56,7 +56,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/txtStatusMsg"
+            android:id="@+id/people_bio"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="15dp"
