--- a/app/src/main/res/layout/people_item.xml
+++ b/app/src/main/res/layout/people_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
@@ -23,11 +24,13 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/people_image"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/profile_person"
+                android:src="@drawable/ic_person"
                 app:civ_border_color="@color/white"
                 app:civ_border_width="2dp" />
 
@@ -36,26 +39,25 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <TextView
                     android:id="@+id/people_name"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
                     android:layout_marginTop="10dp"
+                    android:gravity="center"
                     android:paddingLeft="15dp"
                     android:text="Ibrahim Shaltout"
                     android:textSize="15dp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/txtStatusMsg"
-                    android:layout_gravity="center"
-                    android:gravity="center"
+                    android:id="@+id/people_bio"
                     android:layout_width="162dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginTop="8dp"
+                    android:gravity="center"
                     android:paddingLeft="15dp"
                     android:paddingRight="@dimen/feed_item_status_pad_left_right"
                     android:paddingBottom="5dp"
@@ -64,14 +66,15 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="@color/colorAccent"/>
+                    android:background="@color/colorAccent" />
 
                 <Button
-                    android:layout_gravity="center"
-                    android:gravity="center"
+                    android:id="@+id/people_follow_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Follow"/>
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="Follow" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
